# dagchain

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  college_data_job.py  dagster.yaml  docker-compose.yml  music_data_job.py  requirements.txt  run.py  setup.cfg  setup.py  workspace.yaml
dagchain/: __init__.py
dagchain/dagchain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dagchain/loader_logic/: __init__.py  base_loaders.py  dag_abstractions.py
dagchain/storage/: __init__.py  local_vectorstore.py  pinecone.py  weaviate.py
example/: requirements.txt
examples/: Makefile  agent.py  main.py  requirements.txt
examples/local_vectorstore/: __init__.py  ingest.py  query.py
examples/pinecone_db/: __init__.py  ingest.py  query.py
examples/weaviate_db/: __init__.py  ingest.py  query.py
loader_logic/: base_loaders.py  dag_abstractions.py
vectorstore/: college_vectorstore.pkl  music_vectorstore.pkl
