[metadata]
name = dagchain
version = 1.0.0
author = Zander Chase
author_email = zanderchase@gmail.com
description = Python package for vectorstore loader orchastration 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/zanderchase/dagchain
project_urls =
    repository = https://github.com/zanderchase/dagchain
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dagchain
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dagchain